# pucch-f2-modeling

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: awgn_channel.cpp.E6CDE3FE02E21314.idx  bench_decoder.cpp.709BD4C3D103014F.idx  bler_simulator.cpp.1A2F06B5DD0BBCD6.idx  block_encoder.cpp.E6441712F3653A2C.idx  block_encoder.hpp.C858EB674939C804.idx  generator_matrix.hpp.CBDA9F01621F317B.idx  json_io.cpp.275B654FB2832553.idx  main.cpp.CECA88A99A644786.idx  qpsk_demodulator.cpp.0ABF834D4D9BCEA1.idx  qpsk_modulator.cpp.9BADEFC2B3DE407D.idx  soft_decoder.cpp.D413D07B6183D13E.idx  test_encoder.cpp.ECD782C618C1EC91.idx  test_placeholder.cpp.61D69A816637DB65.idx  types.hpp.FD14A4A6379D16E1.idx
benchmarks/: CMakeLists.txt  bench_decoder.cpp
scripts/: plot_bler.py
src/: main.cpp  types.hpp
src/channel/: awgn_channel.cpp  awgn_channel.hpp
src/codec/: block_encoder.cpp  block_encoder.hpp  generator_matrix.hpp  soft_decoder.cpp  soft_decoder.hpp
src/io/: json_io.cpp  json_io.hpp
src/modem/: qpsk_demodulator.cpp  qpsk_demodulator.hpp  qpsk_modulator.cpp  qpsk_modulator.hpp
src/simulation/: bler_simulator.cpp  bler_simulator.hpp
tests/: CMakeLists.txt  test_channel.cpp  test_decoder.cpp  test_encoder.cpp  test_integration.cpp  test_placeholder.cpp  test_qpsk.cpp
